frontend/test/should_pass/external_filter_001.grg
rule test1
{
    replace {
		exec(test2\f2);
    }
} \ f1

rule test2
{
	modify {
		exec(test1\f1);
	}
} \ f2

rule test3
{
	modify {
		exec(test3\f3);
	}
} \ f3
