frontend/test/should_fail/induced_001.grg
rule r {
	pattern {
	    induced();
	}
	replace {
	}
}

